--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.0.1",
     "bootstrap": "^5.2.3",
+    "dayjs": "^1.11.7",
     "file-saver": "^2.0.5",
     "moment": "^2.29.4",
+    "qs": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
