--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "bootstrap": "^5.2.3",
     "dayjs": "^1.11.7",
     "file-saver": "^2.0.5",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "moment": "^2.29.4",
     "qs": "^6.11.1",
     "react": "^18.2.0",
