--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.0.1",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.2.1",
     "dayjs": "^1.11.7",
     "file-saver": "^2.0.5",
     "jspdf": "^2.5.1",
