--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "nodemon src/app.js --ignore sessions --ext js,jsx --exec \"node_modules/.bin/sequelize-cli db:migrate && node src/app.js\"",
+    "dev": "nodemon src/app.js --ignore sessions --ext js,jsx",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
