--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.31.1",
-    "session-file-store": "^1.5.0"
+    "session-file-store": "^1.5.0",
+    "sequelize-cli": "^6.6.0"
   }
 }
