--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,9 +1,9 @@
-const path = require('path');
-require('dotenv').config();
+const path = require("path");
+require("dotenv").config();
 
 module.exports = {
-  'config': path.resolve('db', 'database.json'),
-  'models-path': path.resolve('db', 'models'),
-  'seeders-path': path.resolve('db', 'seeders'),
-  'migrations-path': path.resolve('db', 'migrations')
+  config: path.resolve("server", "db", "database.json"),
+  "models-path": path.resolve("server", "db", "models"),
+  "seeders-path": path.resolve("server", "db", "seeders"),
+  "migrations-path": path.resolve("server", "db", "migrations"),
 };
