--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node src/app.js",
+    "start": "node app.js",
     "dev": "nodemon src/app.js --ignore sessions --ext js,jsx",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "echo \"no build steps required for server\""
