--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "restaurant management system",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"cd client && npm start\" \"cd server && npm start\"",
+    "start": "cd server && npm start",
     "dev": "cd server && npm run dev",
     "build": "cd client && npm run build && cd ../server && npm run build",
     "test": "cd client && npm test",
