--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon src/app.js --ignore sessions --ext js,jsx",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "echo \"no build steps required for server\""
+    "dev": "nodemon src/app.js --ignore sessions --ext js,jsx"
   },
   "keywords": [],
   "author": "",
@@ -32,6 +30,8 @@
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.31.1",
-    "session-file-store": "^1.5.0"
+    "session-file-store": "^1.5.0",
+    "sequelize-cli": "^6.6.0",
+    "path": "^0.12.7"
   }
 }
