--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "restaurant-management-software",
   "version": "1.0.0",
   "description": "restaurant management system",
-  "main": "test.js",
+  "main": "index.js",
   "scripts": {
     "postinstall": "cd server && npm i && npx sequelize db:migrate:undo:all && npx sequelize db:migrate && npx sequelize db:seed:all && cd ../client && npm i && npm run build",
     "start": "cd server && npm start",
